Speed , updates, vehicle and Driver info displayed well in info panel. Now working on signals in Django.

--- a/transmitter/templates/cp_to_moze/index.html
+++ b/transmitter/templates/cp_to_moze/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="infoColumn">
           <div class="title">Updates</div>
-          <div class="info" id="infoupdates">Last Updated: 2024-04-12 15:30</div>
+          <div class="info" id="infoupdates">I will dislay bus updates here:</div>
          
           <!-- Add more update-related information here -->
       </div>
